--- a/LastPerformance/src/components/home/UI.css
+++ b/LastPerformance/src/components/home/UI.css
@@ -11,7 +11,7 @@ a
     text-decoration: none;
     color: rgb(11, 232, 232);
 }
-.nav
+.nav /* navigation bar*/
 {
     display: flex;
     align-items: center;
