--- a/LastPerformance/src/pages/Forms.css
+++ b/LastPerformance/src/pages/Forms.css
@@ -21,9 +21,14 @@
 {
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: rgb(13, 120, 220);
+    color: rgb(15, 187, 225);
     font-size: 20px;
     font-weight: 100px;
     text-shadow: 5px, 5px; 
     margin-top: 15px;
+}
+
+.button
+{
+    align-items: center;
 }
