--- a/LastPerformance/src/components/Header/header.css
+++ b/LastPerformance/src/components/Header/header.css
@@ -1,347 +1,242 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-.navbarr
-{
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.navbarr {
     background: #000;
     height: 40px;
     width: 100%;
     box-shadow: 0px 8px 20px black;
 }
-.navbarr h1
-{ 
-color: white;
-text-align: center;
+
+.navbarr h1 { 
+    color: white;
+    text-align: center;
+    line-height: 40px;
 }
 
-.secnavbar
-{
+.secnavbar {
     background: #fff;
     height: 70px;
     width: 100%;
     box-shadow: 0px 8px 20px rgb(75, 71, 71);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.secnavbar nav
-{
+
+.secnavbar nav {
     display: flex;
     align-items: center;
     gap: 50px;
-    justify-content: center;
-    margin-left: 500px;
-    position: relative;
-    padding-top: 20px;
 }
+
 .secnavbar nav .list_nav .nav_link {
     font-size: 20px;
     color: #000;
     text-decoration: none;
-  }
-  .secnavbar nav .list_nav:hover {
+}
+
+.secnavbar nav .list_nav:hover {
     transform: scale(1.1); 
     transition: transform 0.3s ease; 
-  }
-  .secnavbar nav .list_nav:hover .nav_link {
+}
+
+.secnavbar nav .list_nav:hover .nav_link {
     color: rgb(0, 28,73); 
     font-weight: 400;
-  }
+}
 
-  .firstPage
-  {
+.firstPage {
     display: flex;
-    gap: 70px;
-    margin-left: 50px;
-  }
-
-  .firstPage1
-{
-    height: 100%;
-    width:40% ;
-    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px;
     justify-content: center;
-    margin-top: 200px;
-    margin-left: 200px;
-  
-    h1
-    {
-        font-size: 40px;
-        color: rgb(0,28,73);
-    }
-    P
-    {
-        font-size: 20px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    .buttons
-    {
-        button
-        {
-      padding: 20px;  
-      border: 1px solid white;
-      border-radius: 10px;
-      background-color: rgb(0, 28,73);
-      color: white;
-      margin-right: 20px;
-      cursor: pointer;
-      font-weight: 500;
-      width: 120px;
-      margin-top: 10px;
-        }   
-    }
+    margin-top: 3%;
 }
 
-.firstimage
-{
-margin-right: 100px;
-margin-top: 120px;
+.firstPage1 {
+    flex: 1;
+    max-width: 500px;
+    margin-top: 5%;
 }
 
-.secondpage
-{
+.firstPage1 h1 {
+    font-size: 2.5em;
+    color: rgb(0,28,73);
+    margin: 10px 0;
+
+}
+
+.firstPage1 p {
+    font-size: 1.25em;
+    margin: 10px 0;
+}
+
+.buttons button {
+    padding: 10px 20px;
+    border: 1px solid white;
+    border-radius: 10px;
+    background-color: rgb(0, 28,73);
+    color: white;
+    cursor: pointer;
+    font-weight: 500;
+    margin: 5px;
+}
+.buttons .buttons{
+    margin-left: 5%;
+
+}
+.firstimage {
+    flex: 1;
+    max-width: 500px;
+    margin: 20px;
+}
+
+.secondpage {
     display: flex;
-    gap: 100px;
-}
-.secondpage .secondleft
-{
-margin-left: 100px;
-}
-
-.secondright
-{
-    margin-top: 50px;
-    color: rgb(0,28,73);
-}
-.secondright .par1
-{
-    font-size: 20px;
-    width: 800px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 30px;
-}
-
-.secondright .par2
-{
-    font-size: 20px;
-    width: 800px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 30px;
-
-}
-
-.secondright .par3
-{
-    font-size: 20px;
-    width: 800px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 30px;
-
-}
-
-.secondright .par4
-{
-    font-size: 20px;
-    width: 800px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 30px;
-   
-
-}
-
-.thirdpage  h1
-{
-    text-align: center;
-    font-size: 40px;
-    color: rgb(0,28,73);
-}
-.third1
-{
-    display: flex;
-    margin-left: 180px;
-    margin-top: 30px;
-    gap: 50px;
-}
-.third1 .box1
-{
-    height: 300px;
-    width: 330px;
-    border: 0.2px solid;
-    border-radius: 4px;
-    color: #c7baba;
-    box-shadow: 0px 8px 30px rgb(75, 71, 71);
-    text-align: center;
-    font-size: 30px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 400;
-    color: rgb(54, 57, 61);
-}
-.third1 .box1:hover {
-    transform: translateY(-10px); /* Move up by 10px on hover */
-}
-
-.third1 .box2
-{
-    height: 300px;
-    width: 330px;
-    border: 0.2px solid;
-    border-radius: 4px;
-    color: #c7baba;
-    box-shadow: 0px 8px 20px rgb(75, 71, 71);
-    text-align: center;
-    font-size: 30px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(0,28,73);
-}
-.third1 .box2:hover {
-    transform: translateY(-10px); /* Move up by 10px on hover */
-}
-.third1 .box3
-{
-    height: 300px;
-    width: 330px;
-    border: 0.2px solid;
-    border-radius: 4px;
-    color: #c7baba;
-    box-shadow: 0px 8px 20px rgb(75, 71, 71);
-    text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
-    color: rgb(0,28,73);
-}
-.third1 .box3:hover {
-    transform: translateY(-10px); /* Move up by 10px on hover */
-}
-.third1 .box4
-{
-    height: 300px;
-    width: 330px;
-    border: 0.2px solid;
-    border-radius: 4px;
-    color: #c7baba;
-    box-shadow: 0px 8px 20px rgb(75, 71, 71);
-    text-align: center;
-    font-size: 30px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-    color: rgb(0,28,73);
-}
-.third1 .box4:hover {
-    transform: translateY(-10px); /* Move up by 10px on hover */
-}
-
-.fourthpage .fourth1
-{
-    height: 300px;
-    width: 100%;
-    background: rgb(255,255,255);
-    margin-top: 15px;
-    margin-top: 20px;
-
-}
-.fourthpage  h1
-{
-    text-align: center;
-    font-size: 40px;
-    color: rgb(0,28,73);
-    margin-top: 45px;
-}
-.fourth1{
-    display: flex;
+    flex-wrap: wrap;
     gap: 300px;
-    margin-left: 400px;
-    font-size: 30px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 20px;
+    justify-content: center;
+    margin-top: 3%;
+
+}
+
+.secondleft {
+    flex: 1;
+    max-width: 500px;
+
+}
+
+.secondright {
+    flex: 1;
+    max-width: 800px;
     color: rgb(0,28,73);
 }
-.fourth1 .fourthfirst .esru
-{
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(0,28,73);   
-}
-.fourth1 .fourthfirst .nahi
-{
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(0,28,73);   
-}
-.fourth1 .fourthfirst .nati
-{
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(0,28,73);   
-}
-/* borderrrrrrrr */
-.fourth1 .fourthsecond .kenu
-{
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(0,28,73);   
+
+.secondright .par1, .secondright .par2, .secondright .par3, .secondright .par4, .secondright .par5, .secondright .par6 {
+    font-size: 1.25em;
+    margin-top: 20px;
 }
 
-.fourth1 .fourthsecond .hale
-{
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(0,28,73);   
+.thirdpage h1 {
+    text-align: center;
+    font-size: 2.5em;
+    color: rgb(0,28,73);
+    margin-top: 20px;
 }
 
-.fourth1 .fourthsecond .amen
-{
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(0,28,73);   
-}
-/* borderrrrrrrr */
-.fourth1 .fourththird .rich
-{
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(0,28,73);   
+.third1 {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    padding: 20px;
 }
 
-.fourth1 .fourththird .eba
-{
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(0,28,73);   
+.third1 .box1, .third1 .box2, .third1 .box3, .third1 .box4 {
+    flex: 1;
+    max-width: 330px;
+    height: 300px;
+    border: 0.2px solid;
+    border-radius: 4px;
+    box-shadow: 0px 8px 20px rgb(75, 71, 71);
+    text-align: center;
+    font-size: 1.25em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s ease;
 }
 
-.fourth1 .fourththird .roba
-{
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(0,28,73);   
+.third1 .box1:hover, .third1 .box2:hover, .third1 .box3:hover, .third1 .box4:hover {
+    transform: translateY(-10px);
 }
-/* borderrrrrrrr */
 
-.fifthpage
-{
+.fourthpage h1 {
+    text-align: center;
+    font-size: 2.5em;
+    color: rgb(0,28,73);
+    margin-top: 20px;
+}
+
+.fourth1 {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    padding: 20px;
+}
+
+.fourth1 .fourthfirst, .fourth1 .fourthsecond, .fourth1 .fourththird {
+    flex: 1;
+    max-width: 300px;
+}
+
+.fourth1 .esru, .fourth1 .nahi, .fourth1 .nati,
+.fourth1 .kenu, .fourth1 .hale, .fourth1 .amen,
+.fourth1 .rich, .fourth1 .eba, .fourth1 .roba {
+    font-size: 1.25em;
+    margin-top: 10px;
+}
+
+.fifthpage {
     height: 50px;
     width: 100%;
     background: rgb(0,28,73);
-    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.fifthpage h4
-{
-    text-align: center;
+
+.fifthpage h4 {
     color: white;
-    margin-top: -10px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    padding-top: 15px;
 }
 
+/* Media Queries */
+@media screen and (max-width: 768px) {
+    .secnavbar nav {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .firstPage {
+        flex-direction: column;
+    }
+    .firstPage1, .firstimage, .secondleft, .secondright {
+        max-width: 100%;
+    }
+    .third1 {
+        flex-direction: column;
+    }
+    .fourth1 {
+        flex-direction: column;
+    }
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media screen and (max-width: 480px) {
+    .secnavbar nav {
+        flex-direction: column;
+        gap: 5px;
+    }
+    .firstPage1 h1 {
+        font-size: 2em;
+    }
+    .firstPage1 p, .secondright .par1, .secondright .par2, .secondright .par3, .secondright .par4 {
+        font-size: 1em;
+    }
+    .thirdpage h1, .fourthpage h1 {
+        font-size: 2em;
+    }
+    .third1 .box1, .third1 .box2, .third1 .box3, .third1 .box4,
+    .fourth1 .fourthfirst, .fourth1 .fourthsecond, .fourth1 .fourththird {
+        max-width: 100%;
+    }
+}
