--- a/dash_board/src/registration/RegistrationForm.css
+++ b/dash_board/src/registration/RegistrationForm.css
@@ -1,9 +1,8 @@
-.container
+.container5
 {
     display: flex !important;
     flex-direction: column;
     margin: auto;
-    margin-top: 50px ;
     height: 800px !important;
     width: 700px !important;
     /* background: #fff; */
