--- a/LastPerformance/src/components/Registration/registration.css
+++ b/LastPerformance/src/components/Registration/registration.css
@@ -1,126 +1,80 @@
-.container1 {
-    display: flex !important;
-    flex-direction: column;
-    margin: auto;
-    margin-top: 35%;
-    height: 80% !important;
-    max-width: 30% !important;
-    /* background: hsla(187, 91%, 13%, 0.692); */
-    padding-bottom: 30px;
-    border-radius: 10px;
-    background-color: rgb(183, 186, 192)!important;
-    box-shadow: 0px 8px 20px rgb(9, 9, 9);
+#containerReg {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f9f9f9; /* Added background color */
+  border-radius: 10px; /* Rounded corners */
+  box-shadow: 0px 18px 30px black;
+  height: 500px; /* Increased height */
+  margin-top: 200px;
+}
 
-  }
-  
-  .header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 9px;
-    width: 100%;
-    margin-top: 30px;
-  }
-  
-  .text {
-    color: white !important;
-    font-size: 48px;
-    font-weight: 700;
-  }
-  
-  .underline {
-    width: 61px;
-    height: 6px;
-    background: white !important;
-    border-radius: 9px;
-  }
-  
-  .inputs {
-    margin-top: 55px;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-  }
-  
-  .input {
-    display: flex;
-    align-items: center;
-    margin: auto;
-    width: 100%;
-    max-width: 480px;
-    height: 80px;
-    background: #eaeaea;
-    border-radius: 6px;
-  }
-  
-  .input img {
-    margin: 0px 30px;
-  }
-  
-  .input input {
-    height: 50px;
-    width: 100%;
-    max-width: 400px;
-    background: transparent;
-    border: none;
-    outline: none;
-    color: #797979;
-    font-size: 19px;
-  }
-  
-  .forgot-password {
-    padding-left: 62px;
-    margin-top: 27px;
-    color: white;
-    font-size: 18px;
-    margin-left: 270px;
-  }
-  
-  .forgot-password span {
-    color: rgb(4, 12, 74);
-    cursor: pointer;
-  }
-  
-  .submit-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-    margin: 60px auto;
-  }
-  
-  .submit .reg-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-width: 220px;
-    height: 59px;
-    color: #fff;
-    background: rgb(186, 7, 153);
-    border-radius: 50px;
-    font-size: 19px;
-    font-weight: 700;
-    cursor: pointer;
-  }
-  
-  .gray {
-    background: #eaeaea;
-    color: #676767;
-  }
-  
-  @media only screen and (max-width: 768px) {
-    .input {
-      max-width: 90%;
-    }
-  
-    .input input {
-      max-width: calc(100% - 80px);
-    }
-  
-    .forgot-password {
-      margin-left: 0;
-      text-align: center;
-    }
-  }
-  
+#headerReg {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#text {
+  font-size: 24px;
+}
+
+#underline {
+  width: 50px;
+  height: 3px;
+  background-color: #333;
+  margin: 10px auto;
+}
+
+#error {
+  background-color: maroon;
+  text-align: center;
+  color: white;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+#inputsReg {
+  margin-bottom: 20px;
+}
+
+#inputReg {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+#inputReg img {
+  width: 20px;
+  margin-right: 10px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  width: calc(100% - 30px);
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+#forgot-password {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#submit-container {
+  text-align: center;
+}
+
+#submit button {
+  background-color: rgb(0,28,73);
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.reg-button:hover {
+  background-color: rgb(0,28,73);
+}
