--- a/LastPerformance/src/components/login/Login.css
+++ b/LastPerformance/src/components/login/Login.css
@@ -1,124 +1,95 @@
-.container1 {
-    display: flex !important;
-    flex-direction: column;
-    margin: auto;
-    margin-top: 35%;
-    height: auto !important;
-    max-width: 30% !important;
-    background: hsla(187, 91%, 13%, 0.692);
-    padding-bottom: 30px;
-    border-radius: 10px;
-    background-color: rgb(0, 28, 73)!important;
-  }
-  
-  .header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 9px;
-    width: 100%;
-    margin-top: 30px;
-  }
-  
-  .text {
-    color: white !important;
-    font-size: 48px;
-    font-weight: 700;
-  }
-  
-  .underline {
-    width: 61px;
-    height: 6px;
-    background: white !important;
-    border-radius: 9px;
-  }
-  
-  .inputs {
-    margin-top: 55px;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-  }
-  
-  .input {
-    display: flex;
-    align-items: center;
-    margin: auto;
-    width: 100%;
-    max-width: 480px;
-    height: 80px;
-    background: #eaeaea;
-    border-radius: 6px;
-  }
-  
-  .input img {
-    margin: 0px 30px;
-  }
-  
-  .input input {
-    height: 50px;
-    width: 100%;
-    max-width: 400px;
-    background: transparent;
-    border: none;
-    outline: none;
-    color: #797979;
-    font-size: 19px;
-  }
-  
-  .forgot-password {
-    padding-left: 62px;
-    margin-top: 27px;
-    color: white;
-    font-size: 18px;
-    margin-left: 270px;
-  }
-  
-  .forgot-password span {
-    color: rgb(4, 12, 74);
-    cursor: pointer;
-  }
-  
-  .submit-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-    margin: 60px auto;
-  }
-  
-  .submit .reg-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-width: 220px;
-    height: 59px;
-    color: #fff;
-    background: rgb(186, 7, 153);
-    border-radius: 50px;
-    font-size: 19px;
-    font-weight: 700;
-    cursor: pointer;
-  }
-  
-  .gray {
-    background: #eaeaea;
-    color: #676767;
-  }
-  
-  @media only screen and (max-width: 768px) {
-    .input {
-      max-width: 90%;
-    }
-  
-    .input input {
-      max-width: calc(100% - 80px);
-    }
-  
-    .forgot-password {
-      margin-left: 0;
-      text-align: center;
-    }
-  }
-  
+/* Login.css */
+
+#login-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f0f0f0;
+}
+
+#container1Input {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 10px 18px 30px rgb(0, 0, 0);
+  width: 400px;
+  height: 500px;
+}
+
+
+#error {
+  color: red;
+  margin-bottom: 10px;
+}
+
+#headerA {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#text {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+}
+
+#underline {
+  height: 3px;
+  width: 50px;
+  background-color: #333;
+  margin: 0 auto;
+}
+
+#inputsA {
+  margin-bottom: 20px;
+}
+
+#inputAa {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+ #imgb {
+  width: 20px;
+  margin-right: 10px;
+} 
+
+input[type='email'],
+input[type='password'] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+}
+
+#forgot-password {
+  text-align: center;
+  color: #666;
+  margin-bottom: 20px;
+}
+
+#forgot-password span {
+  color: #333;
+  cursor: pointer;
+}
+
+#submit-container {
+  text-align: center;
+}
+
+.reg-button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.reg-button:hover {
+  background-color: #0056b3;
+}
