--- a/dash_board/src/addstudents/AddStudent.css
+++ b/dash_board/src/addstudents/AddStudent.css
@@ -6,7 +6,7 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #05445E;
+    background-color: #f0f3f4;
 
   }
   
