--- a/LastPerformance/src/components/TeachersPage/TeachersList.css
+++ b/LastPerformance/src/components/TeachersPage/TeachersList.css
@@ -6,16 +6,29 @@
     padding: 20px;
     font-family: Arial, sans-serif;
   }
-  
+  .bothh
+
+{
+  display: flex;
+  gap: 80%;
+}
+
+.bothh2 button
+{
+width: 100px;
+height: 50px;
+cursor: pointer;
+border-radius: 10px;
+}
   .list--headerB {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
     padding: 10px;
-    background-color: #f5f5f5;
+    background-color: #05445E;
     border-radius: 8px;
-    width: 50%;
+    width: 10%;
     
 
   }
@@ -29,15 +42,15 @@
   
   .list--headerB a {
     text-decoration: none;
-    color: #007bff;
+    color: #05445E;
     transition: color 0.3s ease;
   }
   
   .list--headerB a:hover {
-    color: #0056b3;
+    color: #05445E;
   }
   
-  .list--containerB {
+  .list--containerB button {
     width: 50%;
     margin: 0 auto;  /* Centers the container horizontally */
     overflow-x: auto;
@@ -60,8 +73,9 @@
   }
   
   th {
-    background-color: #f0f0f0;
-    color: #333;
+    background-color: #05445E;
+    color: White;
+    border-radius: 3px;
   }
   
   tbody tr {
@@ -70,7 +84,8 @@
   }
   
   tbody tr:hover {
-    background-color: #f0f0f0;
+    background-color: #312f2f;
+    color: white;
   }
   
   @media (max-width: 768px) {
