--- a/LastPerformance/src/pages/Forms.css
+++ b/LastPerformance/src/pages/Forms.css
@@ -21,7 +21,7 @@
 {
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: rgb(15, 187, 225);
+    color: #05445E;
     font-size: 20px;
     font-weight: 100px;
     text-shadow: 5px, 5px; 
