dashboard code added

--- a/dash_board/src/addteachers/AddTeachers.css
+++ b/dash_board/src/addteachers/AddTeachers.css
@@ -7,7 +7,7 @@
     padding: 20px;
     background-color: #f9f9f9;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 8px 20px rgb(75, 71, 71);
   }
   
   .header {
