--- a/LastPerformance/src/components/TeachersPage/TeachersList.css
+++ b/LastPerformance/src/components/TeachersPage/TeachersList.css
@@ -10,7 +10,7 @@
 
 {
   display: flex;
-  gap: 80%;
+  gap: 80% !important;
 }
 
 .bothh2 button
@@ -20,15 +20,13 @@ height: 50px;
 cursor: pointer;
 border-radius: 10px;
 }
-  .list--headerB {
+  .list--headerB a button{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
     padding: 10px;
-    background-color: #05445E;
     border-radius: 8px;
-    width: 10%;
     
 
   }
